<resources>
    <string name="app_name">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="accept">You accept</string>
    <string name="terms"><u>Terms Conditions</u></string>
    <string name="send">Send</string>
    <string name="good_product">Good Products</string>
    <string name="more">More</string>
    <string name="most_rate">Most Rate</string>
    <string name="discount">Discount</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="continue_shop">Continue</string>
    <string name="total">Total</string>
    <string name="forget_password">Forget PAssword</string>
    <string name="are_you_forget_password">Are you forget password</string>
    <string name="no_have_account">Have you account ?</string>
    <string name="create_account">Create account</string>
    <string name="product">Product</string>
    <string name="details">Details</string>
    <string name="rate">Rate</string>
    <string name="add_to_cart">Add Cart</string>
    <string name="shop_new">Buy Now</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="delivery">Delivery</string>
    <string name="edit">Edit</string>
    <string name="delivery_way">Delivery Way</string>
    <string name="payment_way">Payment Way</string>
    <string name="ok">Confirm</string>
    <string name="add_address">Add Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="add_phone">Add Phone</string>
    <string name="phone">Phone</string>
    <string name="elec_payment">Electronic Payment</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="register_trader">Register as trader</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="service">Service</string>
    <string name="with_socialmedia">Login with social media</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="delete">Delete</string>
    <string name="_delivery">Delivery</string>
    <string name="payment">Paymnet</string>
    <string name="brief">Brief</string>
    <string name="price">Price</string>
    <string name="boo_service">Book a service</string>
    <string name="booking">My booking</string>
</resources>
