<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cart"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_mail"
                    android:inputType="textEmailAddress"
                    android:id="@+id/edtEmail"
                    android:paddingStart="15dp"
                    android:hint="@string/email"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_edttext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <EditText
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_profile"
                    android:inputType="text"
                    android:id="@+id/edtUsername"
                    android:paddingStart="15dp"
                    android:hint="@string/username"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_edttext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <EditText
                    android:layout_marginBottom="20dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_password"
                    android:inputType="textPassword"
                    android:id="@+id/edtPassword"
                    android:paddingStart="15dp"
                    android:hint="@string/password"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_edttext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <Button
            android:background="@drawable/shape_btn"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/cart"
            android:textColor="@color/ColorWhite"
            android:textSize="14sp"
            android:text="@string/register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept"/>

            <TextView
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms"/>

        </LinearLayout>

    </RelativeLayout>


</ScrollView>