<ScrollView
    android:background="@color/ColorGray"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"/>

            <androidx.cardview.widget.CardView
                android:layout_below="@+id/logo"
                android:id="@+id/cart"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:textSize="14sp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_mail"
                        android:inputType="textEmailAddress"
                        android:id="@+id/edtEmail"
                        android:paddingStart="15dp"
                        android:hint="@string/email"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_edttext"
                        android:layout_width="match_parent"
                        android:layout_height="35dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height=".5dp"
                        android:background="@color/ColorGray2"/>

                    <EditText
                        android:textSize="14sp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_profile"
                        android:inputType="text"
                        android:id="@+id/edtUsername"
                        android:paddingStart="15dp"
                        android:hint="@string/username"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_edttext"
                        android:layout_width="match_parent"
                        android:layout_height="35dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height=".5dp"
                        android:background="@color/ColorGray2"/>

                    <EditText
                        android:textSize="14sp"
                        android:layout_marginBottom="5dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_password"
                        android:inputType="textPassword"
                        android:id="@+id/edtPassword"
                        android:paddingStart="15dp"
                        android:hint="@string/password"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_edttext"
                        android:layout_width="match_parent"
                        android:layout_height="35dp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:layout_marginBottom="20dp"
                android:id="@+id/btn_register"
                android:background="@drawable/shape_btn"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/cart"
                android:textColor="@color/ColorWhite"
                android:textSize="14sp"
                android:text="@string/register"
                android:layout_width="170dp"
                android:layout_height="40dp"/>

            <LinearLayout
                android:id="@+id/line_terms"
                android:layout_below="@+id/btn_register"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"/>

                <TextView
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"/>

            </LinearLayout>

             <LinearLayout
            android:layout_below="@+id/line_terms"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="5dp"
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true"/>

                <View
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toStartOf="@id/txt"
                    android:background="@color/colorPrimary"/>

                <View
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toEndOf="@id/txt"
                    android:background="@color/colorPrimary"/>

            </RelativeLayout>

            <TextView
                android:layout_marginBottom="15dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                android:text="@string/with_socialmedia"/>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:textColor="@color/ColorWhite"
                    android:textSize="14sp"
                    android:text="@string/facebook"
                    android:background="@drawable/shape_fb"
                    android:layout_margin="2.5dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/twitter"
                    android:textColor="@color/ColorWhite"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:background="@drawable/shape_twitter"
                    android:layout_margin="2.5dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/google"
                    android:textColor="@color/ColorWhite"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:background="@drawable/shape_google"
                    android:layout_margin="2.5dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"/>

            </LinearLayout>


        </LinearLayout>

        </RelativeLayout>





</ScrollView>