<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PackageHome.MainHomeFragment">

   <LinearLayout
       android:background="@color/ColorWhite"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="180dp"
           android:src="@drawable/offers"
           android:scaleType="fitXY"
           />

       <RelativeLayout
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/good_product"
               android:textColor="@color/colorBlack"
               android:textSize="16sp"
               android:padding="10dp"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="35dp"
               android:text="@string/more"
               android:layout_alignParentEnd="true"
               android:textColor="@color/ColorWhite"
               android:background="@drawable/shape_btn"
               android:layout_margin="5dp"
               />

       </RelativeLayout>

       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

       <RelativeLayout
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/most_rate"
               android:textColor="@color/colorBlack"
               android:textSize="16sp"
               android:padding="10dp"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="35dp"
               android:text="@string/more"
               android:layout_alignParentEnd="true"
               android:textColor="@color/ColorWhite"
               android:background="@drawable/shape_btn"
               android:layout_margin="5dp"
               />

       </RelativeLayout>

       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

       <RelativeLayout
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/discount"
               android:textColor="@color/colorBlack"
               android:textSize="16sp"
               android:padding="10dp"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="35dp"
               android:text="@string/more"
               android:layout_alignParentEnd="true"
               android:textColor="@color/ColorWhite"
               android:background="@drawable/shape_btn"
               android:layout_margin="5dp"
               />

       </RelativeLayout>

       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>


   </LinearLayout>

</ScrollView>