<ScrollView
    android:background="@color/ColorGray"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"/>

            <androidx.cardview.widget.CardView
                android:layout_below="@+id/logo"
                android:id="@+id/cart"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:textSize="14sp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_mail"
                        android:inputType="textEmailAddress"
                        android:id="@+id/edtEmail"
                        android:paddingStart="15dp"
                        android:hint="@string/email"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_edttext"
                        android:layout_width="match_parent"
                        android:layout_height="35dp" />

                    <EditText
                        android:textSize="14sp"
                        android:layout_marginBottom="20dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_password"
                        android:inputType="textPassword"
                        android:id="@+id/edtPassword"
                        android:paddingStart="15dp"
                        android:hint="@string/password"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_edttext"
                        android:layout_width="match_parent"
                        android:layout_height="35dp" />

                    <TextView
                        android:id="@+id/txt_forget"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/are_you_forget_password"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <Button
                android:layout_marginBottom="20dp"
                android:id="@+id/btn_login"
                android:background="@drawable/shape_btn"
                android:layout_marginTop="25dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/cart"
                android:textColor="@color/ColorWhite"
                android:textSize="14sp"
                android:text="@string/login"
                android:layout_width="150dp"
                android:layout_height="35dp"/>




        </RelativeLayout>



    </RelativeLayout>


</ScrollView>